新增一個 Menu 及網頁的範例

--- a/app/scripts/directives/sidebar/sidebar.html
+++ b/app/scripts/directives/sidebar/sidebar.html
@@ -3,6 +3,9 @@
         <ul class="nav in" id="side-menu">
             <sidebar-search></sidebar-search>
             <li ui-sref-active="active">
+                <a ui-sref="dashboard.demand-planner"><i class="fa  fa-th-large fa-fw"></i> Demand Planner</a>
+            </li>
+            <li ui-sref-active="active">
                 <a ui-sref="dashboard.home"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
             </li>
             <li ui-sref-active="active">
